--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="header__wrap ul_li_between">
                     <div class="header-logo">
-                        <a href="index.html"><img src="assets/img/logo/main-logo.svg" alt=""></a>
+                        <a href="index.html"><img src="assets/img/logo/main-logo.png" style="height: 2.5rem;  object-fit: contain;" alt=""></a>
                     </div>
                     <div class="main-menu__wrap ul_li navbar navbar-expand-lg">
                         <nav class="main-menu collapse navbar-collapse">
@@ -111,7 +111,7 @@
                                 <div class="xb-header-menu-scroll">
                                     <div class="xb-menu-close xb-hide-xl xb-close"></div>
                                     <div class="xb-logo-mobile xb-hide-xl">
-                                    <a href="index.html" rel="home"><img src="assets/img/logo/main-logo.svg" alt=""></a></div>
+                                    <a href="index.html" rel="home"><img src="assets/img/logo/main-logo.png" alt=""></a></div>
                                  
                                     <nav class="xb-header-nav">
                                         <ul class="xb-menu-primary clearfix">
@@ -655,7 +655,7 @@
                         </div>
                         <div class="footer-bottom ul_li_between">
                             <div class="copyright mt-15">
-                                <p>Copyright © 2024 <a href="index.html">Increase Immunity</a>. All rights reserved.</p>
+                                <p>Copyright © 2024 <a href="index.html">Health One Place</a>. Designed and Developed by <a href="https://www.spritegenix.com/">Sprite Genix</a>. All rights reserved.</p>
                             </div>
                             <div class="social-link ul_li mt-15">
                                 <p>Follow us :</p>
