--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
                                 <div class="xb-heading pb-20">
                                     <h2 class="title">Empowering Health and Wellness for a Stronger Future</h2>
                                 </div>
-                                <p>At Increase Immunity, we are dedicated to enhancing overall well-being through expert-driven strategies to boost immunity and promote a healthier lifestyle. Our personalized programs focus on natural healing, holistic nutrition, and scientifically backed wellness practices to strengthen the body's defense system.</p>
+                                <p>At Health One Place, we are dedicated to enhancing overall well-being through expert-driven strategies to boost immunity and promote a healthier lifestyle. Our personalized programs focus on natural healing, holistic nutrition, and scientifically backed wellness practices to strengthen the body's defense system.</p>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
@@ -275,7 +275,7 @@
                             <div class="xb-heading pb-20">
                                 <h2 class="title color-white">Our Values</h2>
                             </div>
-                            <p class="color-white">At Increase Immunity, we are dedicated to fostering <strong>wellness, natural healing, and lifelong vitality</strong>. We believe in the power of science-backed nutrition, mindfulness, and sustainable well-being practices to enhance immunity and overall health.</p>
+                            <p class="color-white">At Health One Place, we are dedicated to fostering <strong>wellness, natural healing, and lifelong vitality</strong>. We believe in the power of science-backed nutrition, mindfulness, and sustainable well-being practices to enhance immunity and overall health.</p>
                         </div>
                     </div>
                 </div>
