--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
                                 <img src="assets/img/about/vision.webp" alt="Health & Immunity">
                                 <div class="xb-item--holder">
                                     <h3 class="xb-item--title">Our Mission</h3>
-                                    <p>Our mission is to provide <strong>expert-driven guidance on immunity, nutrition, and holistic well-being</strong> to help people lead healthier, more vibrant lives naturally.</p>
+                                    <p>Our mission is to provide <strong>expert-driven guidance on immunity, nutrition, fitness, and holistic well-being</strong> to help people lead healthier, more vibrant lives naturally.</p>
                                 </div>
                             </div>
                         </div>
