--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                                     <div class="xb-testimonial">
                                         <div class="xb-item--avater ul_li mt-none-10">
                                             <div class="xb-item--img mt-10">
-                                                <img src="assets/img/testimonial/tes-img04.jpg" alt="">
+                                                <img src="assets/img/testimonial/testi.png" alt="">
                                             </div>
                                             <div class="xb-item--holder mt-10">
                                                 <h2 class="xb-item--title">Arjun Mehta</h2>
@@ -803,7 +803,7 @@
                                     <div class="xb-testimonial">
                                         <div class="xb-item--avater ul_li mt-none-10">
                                             <div class="xb-item--img mt-10">
-                                                <img src="assets/img/testimonial/tes-img04.jpg" alt="">
+                                                <img src="assets/img/testimonial/testi.png" alt="">
                                             </div>
                                             <div class="xb-item--holder mt-10">
                                                 <h2 class="xb-item--title">Sophia Brown</h2>
@@ -828,7 +828,7 @@
                                     <div class="xb-testimonial">
                                         <div class="xb-item--avater ul_li mt-none-10">
                                             <div class="xb-item--img mt-10">
-                                                <img src="assets/img/testimonial/tes-img03.jpg" alt="">
+                                                <img src="assets/img/testimonial/testi.png" alt="">
                                             </div>
                                             <div class="xb-item--holder mt-10">
                                                 <h2 class="xb-item--title">Riya Sharma</h2>
@@ -853,7 +853,7 @@
                                     <div class="xb-testimonial">
                                         <div class="xb-item--avater ul_li mt-none-10">
                                             <div class="xb-item--img mt-10">
-                                                <img src="assets/img/testimonial/tes-img04.jpg" alt="">
+                                                <img src="assets/img/testimonial/testi.png" alt="">
                                             </div>
                                             <div class="xb-item--holder mt-10">
                                                 <h2 class="xb-item--title">Ethan Williams</h2>
@@ -1037,10 +1037,9 @@
                    <div class="col-xl-4 col-lg-6 col-md-6 footer-col mt-30">
     <div class="footer-widget">
         <div class="footer-widget footer-newslatter">
-        <h2 class="xb-item--title">Boost Your Immunity Naturally</h2>
-        <p class="xb-item--text">Discover effective ways to enhance your immune system through a balanced diet, exercise, and holistic wellness practices.</p>
-        
-        <p class="xb-item--text">Stay informed with expert tips on living a healthier, more energetic life. Explore our resources on natural remedies, fitness, and mindful living.</p>
+            <h2 class="xb-item--title">Prioritize Your Health Naturally</h2>
+            <p class="xb-item--text">Learn how to improve your overall well-being through balanced nutrition, regular exercise, and holistic wellness practices.</p>            
+            <p class="xb-item--text">Stay informed with expert insights on leading a healthier, more energetic life. Explore our resources on natural remedies, fitness, and mindful living.</p>            
     </div>
 </div>
 </div>
