--- a/about.html
+++ b/about.html
@@ -642,17 +642,14 @@
                             </div>
                         </div>
                    <div class="col-xl-4 col-lg-6 col-md-6 footer-col mt-30">
-    <div class="footer-widget">
+     <div class="footer-widget">
         <div class="footer-widget footer-newslatter">
-        <h2 class="xb-item--title">Boost Your Immunity Naturally</h2>
-        <p class="xb-item--text">Discover effective ways to enhance your immune system through a balanced diet, exercise, and holistic wellness practices.</p>
-        
-        <p class="xb-item--text">Stay informed with expert tips on living a healthier, more energetic life. Explore our resources on natural remedies, fitness, and mindful living.</p>
+            <h2 class="xb-item--title">Prioritize Your Health Naturally</h2>
+            <p class="xb-item--text">Learn how to improve your overall well-being through balanced nutrition, regular exercise, and holistic wellness practices.</p>            
+            <p class="xb-item--text">Stay informed with expert insights on leading a healthier, more energetic life. Explore our resources on natural remedies, fitness, and mindful living.</p>            
     </div>
 </div>
-</div>
-
-                        </div>
+</div>                        </div>
                         <div class="footer-bottom ul_li_between">
                             <div class="copyright mt-15">
                                 <p>Copyright © 2024 <a href="index.html">Health One Place</a>. Designed and Developed by <a href="https://www.spritegenix.com/">Sprite Genix</a>. All rights reserved.</p>
