--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
                                   <a href="#!"><span>Pages</span></a>
                                   <ul class="submenu">
                                       <li><a href="about.html"><span>About Us</span></a></li>
-                                      <li><a href="career.html"><span>Career</span></a></li>
+                                      <li><a href="bookings.html"><span>Bookings</span></a></li>
                                       <li><a href="career-single.html"><span>Career Details</span></a></li>
                                       <li><a href="portfolio.html"><span>Portfolio</span></a></li>
                                       <li><a href="portfolio-single.html"><span>Portfolio Details</span></a></li>
@@ -101,7 +101,7 @@
                                       <li><a href="blog-single.html"><span>Blog Details</span></a></li>
                                   </ul> -->
                               </li>
-                              <li><a href="career.html"><span>Career</span></a></li>
+                              <li><a href="bookings.html"><span>Bookings</span></a></li>
                               <li><a href="contact.html"><span>Contact</span></a></li>
                           </ul>
                       </nav>
@@ -138,7 +138,7 @@
                                               </ul>
                                           </li>
                                           <li><a href="blog.html"><span>Blog</span></a></li>
-                                          <li><a href="career.html"><span>Career</span></a></li>
+                                          <li><a href="bookings.html"><span>Bookings</span></a></li>
                                           <li><a href="contact.html"><span>Contact</span></a></li>
                                          
                                       
