--- a/bookings.html
+++ b/bookings.html
@@ -361,9 +361,9 @@
               <span class="sub-title">what we're offering</span>
               <div class="xb-heading pb-20">
                 <h2 class="title">
-                  our main
+                  our online
                   <span class="pos-rel">
-                    services
+                    offerings
                     <svg
                       width="212"
                       height="65"
